--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,59 @@
-/bin
-/build
+# Java
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Eclipse
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# OSX
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# JIDEA
+
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Maven
+target
