--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="test/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="test/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="test/lib/easymock-3.2.jar"/>
+	<classpathentry kind="lib" path="test/lib/objenesis-1.3.jar"/>
+	<classpathentry kind="lib" path="test/lib/cglib-nodep-2.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
