--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,8 @@
 	<classpathentry kind="lib" path="test/lib/objenesis-1.3.jar"/>
 	<classpathentry kind="lib" path="test/lib/cglib-nodep-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/logback-classic-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/logback-core-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
